# lost-and-found-flask

./: .env.example  README.md  app.py  class4-README.md  class5-README.md  main.py  pyproject.toml
.trae/documents/: lost-and-found-prd.md  lost-and-found-technical-architecture.md
data/: items.json
static/: style.css
templates/: base.html  index.html  items.html  lost_report.html  match_results.html
tests/: test_app.py
{{ subagent_artifact_path }}/: {{ uuid }}_plan.md
