[project]
name = "lost-and-found"
version = "0.1.0"
description = "A simple Flask lost and found app for classroom teaching."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.44.1",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.95.1",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    
]
